compiler/test/parse-err/apply-unary-func-wrong-arg-count.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

// expected-note@below{{function defined here}}
func twoArgs(a: int, b: int) -> int {
    return a + b;
}

func ApplyUnaryFuncWrongArgCount(m: Matrix<s, s, int>) -> Matrix<s, s, int> {
    // Unary apply requires the function to have exactly 1 argument
    // expected-error@below{{apply() with 1 matrix argument requires a function with 1 parameter, but got 2}}
    return apply(twoArgs, m);
}
